--- a/stilus.css
+++ b/stilus.css
@@ -7,6 +7,22 @@ h1{
     width: 100%;
     height: 70px;
 }
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+}
+
+a:link {
+    color: white;
+}
+
+a:visited {
+    color: rgba(224, 218, 218, 0.212);
+}
 h2
 {
     cursor: default;
@@ -49,13 +65,14 @@ body
     color: #929796;
     background: #212725;
     background-image: url('kepek/hatterkep.png');
-    padding: 20px;
+    padding: 25px;
     display: grid;
     font-size: 20px;
     place-items: center;
     text-align: center;
     color: #fff;
     transition: 0.4s;
+    
 }
 .csest .doboz:hover
 {
@@ -69,36 +86,76 @@ body
 }
 .csest .doboz:nth-child(1)
 {
-    grid-column: snap 3;
-    grid-row: snap 0;
+    grid-column: snap 4;
+    grid-row: snap 1;
+
+    
 }
-@media (max-width: 991px)
-{
-.csest
-  {
-    grid-template-columns: repeat(auto-fill; minmax(50%, 1fr));
-    grid-template-rows: minmax(auto, auto));
-  }
-.csest .doboz
-{
-    grid-column: unset !important;
-    grid-row: unset !important;
+
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
+html,
+body {
+    margin: 1;
+    padding: 1;
+    box-sizing: content-box;
+    font-family: "Quicksand", sans-serif;
+    font-size: 62.5%;
+    font-size: 10px;
 }
-}
-.topnav
-{
-  
-    overflow: hidden;
-    background-color: rgba(58, 54, 54, 0);
-    background-image: url("kepek/navbarkep.jpg"); /* Navigaciosnak a képe*/
+.nav{
     width: 100%;
+    height: 65px;
+    position: fixed;
+    line-height: 65px;
+    text-align: center;
+
 }
-.topnav a
-{
-    float: left;
-    color: white;
-    text-align: right;
-    padding: 15px 15px;
+.nav div.logo a {
+    text-decoration: underline;
+    color: #fff;
+    font-size: 2.5rem;
+}
+
+.nav div.logo a:hover {
+    color: #00E676;
+}
+
+.nav div.main_list {
+    height: 65px;
+    float: right;
+}
+
+.nav div.main_list ul {
+    width: 100%;
+    height: 65px;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav div.main_list ul li {
+    width: auto;
+    height: 65px;
+    padding: 0;
+    padding-right: 3rem;
+}
+
+.nav div.main_list ul li a {
     text-decoration: none;
-    font-size: 20px;
+    color: #fff;
+    line-height: 65px;
+    font-size: 2.4rem;
+}
+
+.navTrigger {
+    display: none;
+}
+
+.nav {
+    margin-left:-664px;
+    padding-bottom: 20px;
+    margin-top: -20px;
+    -webkit-transition: all 0.7s ease;
+    transition: all 0.7s ease;
 }
