--- a/stilus.css
+++ b/stilus.css
@@ -13,15 +13,15 @@ body {
 a {
     text-decoration: none;
     display: inline-block;
-    padding: 8px 16px;
+    text-align: center;
+}
+.wrapper {
+    text-align: center;
 }
 
-a:link {
-    color: white;
-}
-
-a:visited {
-    color: rgba(224, 218, 218, 0.212);
+.button {
+    position: absolute;
+    top: 50%;
 }
 h2
 {
@@ -41,7 +41,7 @@ body
     min-height: 100vh;
     background: #222;
     width: 100%;
-    background-image: url('kepek/hatterkep.png');
+    background-image: url('kepek/navbarkep.jpg');
     background-size: cover;
     width: 100%;
     height: 1000px;
@@ -55,15 +55,23 @@ body
     position: relative;
     max-width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill; minmax(300px, 1fr));
-    grid-template-rows: minmax(300px, auto));
     margin: 40px;
     grid-auto-flow: dense;
 }
+button {
+    font: xx-large 11px Helvetica;
+    text-decoration: none;
+    background-color: #EEEEEE;
+    color: #333333;
+    padding: 2px 6px 2px 6px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+  }
 .csest .doboz
 {
-    color: #929796;
-    background: #212725;
+    background: #00ffaa;
     background-image: url('kepek/hatterkep.png');
     padding: 25px;
     display: grid;
@@ -90,72 +98,4 @@ body
     grid-row: snap 1;
 
     
-}
-
-@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
-html,
-body {
-    margin: 1;
-    padding: 1;
-    box-sizing: content-box;
-    font-family: "Quicksand", sans-serif;
-    font-size: 62.5%;
-    font-size: 10px;
-}
-.nav{
-    width: 100%;
-    height: 65px;
-    position: fixed;
-    line-height: 65px;
-    text-align: center;
-
-}
-.nav div.logo a {
-    text-decoration: underline;
-    color: #fff;
-    font-size: 2.5rem;
-}
-
-.nav div.logo a:hover {
-    color: #00E676;
-}
-
-.nav div.main_list {
-    height: 65px;
-    float: right;
-}
-
-.nav div.main_list ul {
-    width: 100%;
-    height: 65px;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.nav div.main_list ul li {
-    width: auto;
-    height: 65px;
-    padding: 0;
-    padding-right: 3rem;
-}
-
-.nav div.main_list ul li a {
-    text-decoration: none;
-    color: #fff;
-    line-height: 65px;
-    font-size: 2.4rem;
-}
-
-.navTrigger {
-    display: none;
-}
-
-.nav {
-    margin-left:-664px;
-    padding-bottom: 20px;
-    margin-top: -20px;
-    -webkit-transition: all 0.7s ease;
-    transition: all 0.7s ease;
 }
